# cann

./: .gitignore  CMakeLists.txt  README.md  dataVisualization.py
.github/workflows/: c-cpp.yml
config/: train.json
data/: weights.json
include/: Layer.hh  Matrix.hh  NeuralNetwork.hh  Neuron.hh
include/utils/: Math.hh  Misc.hh
src/: Layer.cc  Matrix.cc  Neuron.cc  main.cc  trainer.cc
src/neural_network/: NeuralNetwork.cc  backPropagation.cc  feedForward.cc  setErrors.cc  train.cc
src/utils/: Math.cc  Misc.cc
